<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_list_avatar"
        android:layout_width="@dimen/image_meeting_width"
        android:layout_height="@dimen/image_meeting_height"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_list_meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:text="Réunion A - 14h00 - Peach"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        android:textSize="@dimen/text_meeting_size"
        app:layout_constraintBottom_toTopOf="@id/item_list_mail"
        app:layout_constraintEnd_toStartOf="@+id/item_list_delete_button"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_list_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="maxime@lamzone.com, alex@lamzone.com, bruna@lamzone.com, gerard@lamzone.com, hubert@lamzone.com"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/text_meeting_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_list_delete_button"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toBottomOf="@+id/item_list_meeting" />

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list_avatar"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>